# arl_project

./: CMakeLists.txt  README.md
include/: functions.h  saliency.h  segmentation.h  segmentationCV.h  selectiveSegmentation.h  vocus2.h  yoloInterface.h
src/: filteredRegions.cpp  flyCamera.cpp  flyCameraDetailed.cpp  functions.cpp  main.cpp  poster.cpp  regions.cpp  saliency.cpp  segmentationMain.cpp  test.cpp  testSaliency.cpp  video.cpp  webCam.cpp
src/old/: contours.cpp  regions.cpp  saliency.cpp
src/saliency/: LineDescriptor.cpp  SaliencyAnalyzer.cpp  SaliencyRegion.cpp  saliency.cpp
src/segmentation/: segMain.cpp  segMainCV.cpp  segMainOld.cpp  segmentation.cpp  segmentationCV.cpp  selectiveSegmentation.cpp
src/vocus2/: main.cpp  vocus2.cpp
src/yoloExtractor/: main.cpp
src/yoloInterface/: main.cpp  visualization.cpp  webCam.cpp  yoloComparator.cpp  yoloInterface.cpp  yoloMain.cpp
src/yoloInterface/darknet/: Makefile
